@@ -11,6 +11,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Changed
 - ADT implementation and AXO (AXOL1TL) with models.
+- merged `main` into `__main__` module.
 
 ### Added
 - CICADA and TOPO with models implementation.
